syntax = "proto3";

package main;

option go_package = ".";

import "google/api/annotations.proto";


service TestApi {
   rpc Echo(ResponseRequest) returns (ResponseRequest) {
      option (google.api.http) = {
         post: "/echo"
         body: "*"
      };
   };
   rpc GetUser(UserRequest) returns (UserResponse) {};

   rpc Registr(RegistrRequest)returns(RegistrResponse){
      option (google.api.http) = {
         post: "/reg"
         body: "*"
   };
}
}

message RegistrRequest{
   string name = 2;
   uint64 balance = 3;
   string usertype = 4;
   string password = 5;
   
 }

 message RegistrResponse{
   string id = 1;
 }

message ResponseRequest {
   string msg = 1;
}

message UserRequest {
   string uuid = 1;
}

message UserResponse {
   string name = 1;
   int32 age = 2;
   string email = 3;
}